--- a/src/components/layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/components/layouts/DefaultLayout/Header/Header.module.scss
@@ -1,10 +1,15 @@
 .wrapper {
+    --search-height: 46px;
+    --search-border-radius: calc(var(--search-height) * 2);
+    --search-button-width: 52px;
+
     height: var(--default-layout-header-height);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
+
 .inner {
     width: var(--default-layout-width);
     height: 100%;
@@ -15,4 +20,40 @@
     align-items: center;
     padding-right: 24px;
     padding-left: 16px;
+}
+
+.search {
+    position: relative;
+    display: flex;
+    width: 500px;
+    align-items: center;
+    background-color: rgba(22, 24, 35, 0.06);
+    height: var(--search-height);
+    border-radius: var(--search-border-radius);
+    padding-left: 16px;
+    border: 1px solid transparent;
+
+    input {
+        flex: 1;
+        background-color: transparent;
+        caret-color: var(--primary);
+        font-size: 1.6rem;
+        line-height: 2.1rem;
+        color: var(--black);
+    }
+
+    .loading,
+    .clear {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        right: var(--search-button-width);
+        font-size: 1.6rem;
+        padding: 0 16px;
+    }
+
+    .search-btn {
+        width: var(--search-button-width);
+        background-color: transparent;
+    }
 }
